tests/snapshots/run_wpt_conformance__coreml_elu_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
elu.https.any.js elu float16 1D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([185, 68, 8, 54, 173, 61, 188, 195, 112, 61, 186, 195, 215, 71, 177, 198, 93, 56, 199, 69, 67, 71, 108, 199, 170, 69, 183, 198, 171, 194, 215, 188, 65, 71, 116, 72, 5, 196, 29, 71, 45, 175, 97, 195, 35, 70, 243, 200]);
  }

  nodes {
    [eluOutput] = elu(operand_0, alpha=1.0, label="");
  }

  outputs { eluOutput; }
}
